Fixed menu overflow bug

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -85,7 +85,7 @@ p a {
   background-size: cover;
   margin: 0em;
   padding-top: 4rem;
-  overflow: hidden;
+  overflow: visible;
   -webkit-box-shadow: 0 -20px 10px 0 rgba(0, 0, 0, 0.1) inset !important;
   box-shadow: 0 -20px 10px 0 rgba(0, 0, 0, 0.1) inset !important;
 }
